# quickspec

./: .gitignore  .hgtags  .travis.yml  CongruenceClosure.hs  Example.hs  FUTURE.md  FourierMotzkin.hs  Generate.hs  Heaps.hs  LICENSE  List.hs  MemoValuation.hs  MkSite.hs  NaiveEquationalReasoning.hs  PrettyPrintingModel.hs  QuickSpec.cabal  QuickSpec.hs  README  README.asciidoc  README.md  Signature.hs  TODO  Term.hs  Test.hs  TestTree.hs  TypeMap.hs  TypeRel.hs  Typeable.hs  Typed.hs  UnionFind.hs  Utils.hs  Zip.hs  changelog  mkdist  notes  quickspec.cabal  result  stack.yaml
Examples/: Example.hs  Heaps.hs
Test/: QuickSpec.hs
Test/QuickSpec/: Approximate.hs  Equation.hs  Generate.hs  Main.hs  Prelude.hs  Signature.hs  Term.hs  TestTotality.hs  TestTree.hs  Utils.hs
Test/QuickSpec/Reasoning/: CongruenceClosure.hs  NaiveEquationalReasoning.hs  PartialEquationalReasoning.hs  UnionFind.hs
Test/QuickSpec/Utils/: MemoValuation.hs  TypeMap.hs  TypeRel.hs  Typeable.hs  Typed.hs
examples/: Arith.hs  ArithFloat.hs  Arrays.hs  AutoGeneralized.hs  Bareiss.hs  Bicomplex.hs  Bools.hs  Combinators.hs  Composition.hs  Conditionals.hs  ConditionalsPruning.hs  Const.hs  Curry.hs  DecisionTrees.hs  Div.hs  DrawGeometry.hs  Example.hs  Exp.hs  GCD.hs  GenericStuff.hs  Geometry.hs  Gyrogroup.hs  Heaps.hs  HugeLists.hs  HugeListsMono.hs  IntSet.hs  ListHOF.hs  ListMonad.hs  Lists.hs  Map.hs  Matrix.hs  MinMax.hs  Octonions.hs  OctonionsGroupy.hs  OctonionsSimple.hs  OldPrettyPrinting.hs  Ords.hs  Parsec.hs  Parsing.hs  Path2.hs  (+14 more)
examples/Music/: Music.lhs  MusicQS.hs  MusicQS1.hs  Perform.lhs
examples/tests/: AC.hs  AC.output  Arith.output  ArithBackground.hs  ArithBackground.output  ArithFloat.hs  ArithFloat.output  Bicomplex.output  Bools.output  Combinators.hs  Combinators.output  Composition-bad.hs  Composition-bad.output  Composition.output  Const.output  Curry.output  Div.output  GCD.output  Geometry.output  Head.hs  Head.output  Heaps.output  IntSet.output  ListHOF.output  ListMonad.output  Lists.output  MinMax.hs  Octonions.output  Pairs.hs  Pairs.output  Parsing.output  PredicateBackground.hs  PredicateBackground.output  PrettyPrinting-warnings.hs  PrettyPrinting-warnings.output  PrettyPrinting.output  PrettyPrintingModel.output  Process.hs  Queues.output  Refinements.hs  (+10 more)
examples/weird/: Gyrogroup.hs  OctonionsComplicated.hs  Ords.hs  Refinements.hs
fourier-motzkin/: FourierMotzkin.hs
old/: Pruning.hs  Signature.hs
old-examples/: Composition.hs  Heaps.hs  PrettyPrinting.hs  Queues.hs
old-src/Test/: QuickSpec.hs
old-src/Test/QuickSpec/: Prelude.hs  Term.hs
old-src/Test/QuickSpec/Reasoning/: NaiveEquationalReasoning.hs
old-src/Test/QuickSpec/Utils/: Typeable.hs
src/: Octonions.hs  Ords.hs  PrettyPrinting.hs  Process.hs  QuickSpec.hs  Zipper.hs  errors.h  t.hs
src/QuickSpec/: Base.hs  Equation.hs  Eval.hs  Explore.hs  FindInstance.hs  Haskell.hs  Instance.hs  Instances.hs  Internal.hs  Label.hs  Memo.hs  NamesFor.hs  OldTerm.hs  Parse.hs  PredicatesInterface.hs  Pretty.hs  PrintConditionally.hs  Prop.hs  Pruner.hs  Pruning.hs  Resolve.hs  Rules.hs  Signature.hs  Term.hs  Terminal.hs  Test.hs  TestSet.hs  Tester.hs  Testing.hs  Type.hs  Utils.hs
src/QuickSpec/Explore/: Conditionals.hs  PartialApplication.hs  Polymorphic.hs  Schemas.hs  Terms.hs
src/QuickSpec/Haskell/: Resolve.hs
src/QuickSpec/Internal/: Explore.hs  Haskell.hs  Parse.hs  Prop.hs  Pruning.hs  Term.hs  Terminal.hs  Testing.hs  Type.hs  Utils.hs
src/QuickSpec/Internal/Explore/: Conditionals.hs  PartialApplication.hs  Polymorphic.hs  Schemas.hs  Terms.hs
src/QuickSpec/Internal/Haskell/: Resolve.hs
src/QuickSpec/Internal/Pruning/: Background.hs  Conditionals.hs  PartialApplication.hs  Twee.hs  Types.hs  UntypedTwee.hs
src/QuickSpec/Internal/Testing/: DecisionTree.hs  QuickCheck.hs
src/QuickSpec/Pruning/: Background.hs  Completion.hs  Completion.hs-boot  Constraints.hs  E.hs  EncodeTypes.hs  Equation.hs  EquationIndex.hs  Equations.hs  FourierMotzkin.hs  HigherOrder.hs  Index.hs  Indexing.hs  KBC.hs  Labels.hs  Queue.hs  Rewrite.hs  Rule.hs  RuleIndex.hs  RuleSet.hs  Simple.hs  Simple.hs-boot  Twee.hs  Types.hs  UntypedTwee.hs  Waldmeister.hs  Z3.hs
src/QuickSpec/Test/: DecisionTree.hs  QuickCheck.hs
src/QuickSpec/Testing/: DecisionTree.hs  QuickCheck.hs
src/Test/: QuickSpec.hs
src/Test/QuickSpec/: Approximate.hs  Base.hs  Equation.hs  Eval.hs  Generate.hs  Main.hs  Memo.hs  Prelude.hs  Pruning.hs  Rules.hs  Signature.hs  Term.hs  Test.hs  TestSet.hs  TestTotality.hs  TestTree.hs  Type.hs  Utils.hs
src/Test/QuickSpec/Pruning/: E.hs  Simple.hs
src/Test/QuickSpec/Reasoning/: NaiveEquationalReasoning.hs  PartialEquationalReasoning.hs  UnionFind.hs
src/Test/QuickSpec/Utils/: MemoValuation.hs  TypeMap.hs  TypeRel.hs  Typed.hs
