Name:                quickspec
Version:             2
Cabal-version:       >= 1.6
Build-type:          Simple

Homepage:            https://github.com/nick8325/quickspec
Author:              Nick Smallbone
Maintainer:          nicsma@chalmers.se

License:             BSD3
License-file:        LICENSE
Copyright:           2009-2016 Nick Smallbone

Category:            Testing

Synopsis:            Equational laws for free!
Description:
  QuickSpec automatically finds equational laws about your program.
  .
  Give it an API, i.e. a collection of functions, and it will spit out
  equations about those functions. For example, given @reverse@, @++@
  and @[]@, QuickSpec finds six laws, which are exactly the ones you
  might write by hand:
  .
  > xs++[] == xs
  > []++xs == xs
  > (xs++ys)++zs == xs++(ys++zs)
  > reverse [] == []
  > reverse (reverse xs) == xs
  > reverse xs++reverse ys == reverse (ys++xs)
  .
  The laws that QuickSpec generates are not proved correct, but have
  passed at least 1000 QuickCheck tests.
  .
  For more information, see the @README@ file at
  https://github.com/nick8325/quickspec/blob/master/README.asciidoc.

Extra-source-files:
  README.asciidoc
  examples/Arith.hs
  examples/Bools.hs
  examples/Combinators.hs
  examples/Composition.hs
  examples/Conditionals.hs
  examples/ConditionalsPruning.hs
  examples/Const.hs
  examples/Geometry.hs
  examples/HugeLists.hs
  examples/ListMonad.hs
  examples/Lists.hs
  examples/MinMax.hs
  examples/OctonionsComplicated.hs
  examples/Octonions.hs
  examples/Pairs.hs
  examples/Parsing.hs
  examples/PrettyPrinting.hs
  examples/PrettyPrintingModel.hs
  examples/Process.hs
  examples/Regex.hs

source-repository head
  type:     git
  location: git://github.com/nick8325/quickspec.git
  branch:   master

library
  ghc-options: -W
  hs-source-dirs: src
  Exposed-modules:
    QuickSpec.Explore
    QuickSpec.Explore.PartialApplication
    QuickSpec.Explore.Schemas
    QuickSpec.Explore.Terms
    QuickSpec.Haskell
    QuickSpec.Haskell.Resolve
    QuickSpec.Prop
    QuickSpec.Pruning
    QuickSpec.Pruning.Background
    QuickSpec.Pruning.Twee
    QuickSpec.Pruning.Types
    QuickSpec.Pruning.UntypedTwee
    QuickSpec.Term
    QuickSpec.Terminal
    QuickSpec.Testing
    QuickSpec.Testing.DecisionTree
    QuickSpec.Testing.QuickCheck
    QuickSpec.Type
    QuickSpec.Utils

  Build-depends:
                QuickCheck >= 2.8,
                base >= 4 && < 5,
                constraints,
                containers,
                data-lens-light,
                dlist,
                random,
                reflection,
                spoon,
                template-haskell,
                transformers,
                twee-lib >= 2,
                uglymemo
